# hindent

./: .gitignore  README-installation-and-usage.md  README.md  README.rst  clojure-examples.hin  composing.py  example-usage.py  example.hin  example.scm  examples.py  first.hin  from_gpt_o1.py  hindent.py  library.py  main.py  new.md  new_parser.py  newoutput.txt  newreadme.rst  newsyntax.txt  pretty_print_s_exp.py  pyproject.toml  requirements.txt  scheme_execution.py  scratch.hin  test.py
docs/: requirements.txt
docs/source/: conf.py  examples.rst  execution.rst  explanation.rst  hindent.rst  index.rst  installation-and-usage.rst  main.rst  misc.rst  modules.rst
examples/: clojure-examples.hin  example.hin  learn-clojure-functions.hin
hindent/: __init__.py  execution.py  library.py
